--- a/ejemplo12.html
+++ b/ejemplo12.html
@@ -9,5 +9,6 @@
     <h1>hola 12345</h1>
     <h2>hola universidad</h2>
     <h1>hola esto es una prueba</h1>
+    <h2>hola alumnos</h2>
 </body>
 </html>
